gramatika_upraveno.txt
%token tTypeInt tTypeFloat tTypeString tNullTypeInt tNullTypeFloat tNullTypeString tIf tElse tWhile tFunction tReturn tVoid tNull tInvalid tIdentifier tFuncName tType tNullType tPlus tMinus tConcat tMul tDiv tLPar tRPar tLCurl tRCurl tColon tSemicolon tComma tAssign tIdentical tNotIdentical tLess tLessEq tMore tMoreEq tInt tReal tReal2 tInt2 tLiteral
%%

program : code program
        |; /*epsilon*/

code : functionDeclaration
     | statement;

if_statement : tIf tLPar expression tRPar tLCurl statements tRCurl tElse tLCurl statements tRCurl;

while_statement : tWhile tLPar expression tRPar tLCurl statements tRCurl;

functionDeclaration : tFunction tFuncName tLPar arguments tRPar tColon type tLCurl statements tRCurl;

arguments : variable variables
          |; /* epsilon */

functionCall : tFuncName tLPar parameters tRPar;
                  
parameters : term parameters2
           |; /* epsilon */

parameters2 : tComma term parameters2
            |; /* epsilon */

statements : statement statements
           |; /* epsilon */

statement : if_statement
          | while_statement
          | functionCall tSemicolon
          | tReturn expression tSemicolon
          | expression statement2 tSemicolon;

statement2 : tAssign statement3
           |; /* epsilon */

statement3 : expression
           | functionCall;
		
expression : term expression2
           |; /* epsilon */
                 
expression2 : tPlus expression
            | tMinus expression
            | tMul expression
            | tDiv expression
            | tConcat expression
            | tLess expression
            | tLessEq expression
            | tMore expression
            | tMoreEq expression
            | tIdentical expression
            | tNotIdentical expression
            |; /* epsilon */

term : const
     | variable;
           
variables : tComma variable variables
          |; /* epsilon */  

variable : type tIdentifier | tIdentifier;
           
const : tInt | tReal | tReal2 | tInt2 | tNull | tLiteral;

type :  tNullTypeInt | tNullTypeFloat | tNullTypeString
	     |tTypeInt | tTypeFloat | tTypeString
	     |tVoid;
            
